# fork

./: get_audio.py  get_data.py  pyproject.toml
django_project/: asgi.py  settings.py  urls.py
fork/: consumers.py  views.py
static/: ajax.js  chat.js  navbar.js  player.js  room.js  style.css  toast.js
templates/fork/: index.html  new_index.html  player.html
