[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
channels = "^3.0.4"
asgiref = "^3.5.2"
youtube-search-python = "^1.6.5"
pytube = "^12.1.0"
django-cors-headers = "^3.12.0"
[tool.poetry.dev-dependencies]
